# ginga-web

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  lambda_handler.py  pyproject.toml
app/: __init__.py  config.py  dependencies.py  deps.py  logging_config.py  main.py  tech_list.py
app/auth/: __init__.py  jwt.py
app/database/: base.py  connection.py
app/database/migrations/: env.py
app/database/models/: __init__.py  application.py  company.py  job.py  (+4 more)
app/routes/: __init__.py  applications.py  companies.py  dashboard.py  jobs_public.py  jobs_recruiter.py  me.py  recruiter_applications.py  tags.py  uploads.py
app/schemas/: company.py  job.py  me.py
app/services/: application_service.py  company_service.py  file_service.py  job_service.py  user_service.py
apps/accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/companies/: admin.py  forms.py  models.py  urls.py  views.py
apps/core/: apps.py
apps/jobs/: admin.py  forms.py  models.py  urls.py  views.py
core/: asgi.py  settings.py  urls.py  views.py  wsgi.py
docs/: DATA_MIGRATION.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
scripts/: load_techs.py
templates/: base.html  dashboard.html  home.html
templates/companies/: company_confirm_delete.html  company_form.html  dashboard.html
templates/jobs/: application_list.html  job_dashboard.html  job_detail.html  job_form.html  job_list.html
templates/registration/: signup.html
(+45 files in other folders)
