[project]
name = "ginga-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "django-bootstrap5>=26.1",
    "django-environ>=0.12.0",
    "django-storages[s3]>=1.14.6",
    "django-taggit>=6.1.0",
    "gunicorn>=24.1.1",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
